// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option go_package = "github.com/lsubash/grpc-go/tree/grpc_am/examples/helloworld/helloworld";

package AttestationManager;

service NodeAttestationManagerService {
  // NodeAttestationManagerService is called from edge node to set the attestaion status
  rpc UpdateNodeAttestationStatus(UpdateNodeAttestStatusRequest) returns (UpdateNodeAttestStatusResponse) {}
}


message UpdateNodeAttestStatusRequest {
 /* enum Code {
    ATTEST_STATUS_SUCEESS = 0;
    ATTEST_STATUS_FAIL = 1;
  }*/
  int32 code = 1; // status code
  string systemuuid = 2; // system uuid or node name
}

//Response message
message UpdateNodeAttestStatusResponse {
  string message = 1;
}
